# SensorDB_API

./: .gitignore  CMakeLists.txt
include/: sensordata.h  sensordb.h
src/: CMakeLists.txt  README.txt  dbPyInterf.py  pySensordb.cpp  sensordata.cpp  sensordb.cpp  sensordb.py  test_sensordb.py
test/: 25-112.txt  CMakeLists.txt  activity.txt  activitytype.txt  all.txt  datatype.txt  dbconnect.config  device.txt  operator.txt  position.txt  sensordb_api_test.cpp
