PROJECT(SensorDB)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
INCLUDE_DIRECTORIES (include)
include_directories(${Qt5Widgets_INCLUDES})
SET(SENSORDB_API_LIB SensorDB_API)
SET(TARGET SensorDB_Test)
ADD_SUBDIRECTORY(src)
enable_testing()
ADD_SUBDIRECTORY(test)
