AUX_SOURCE_DIRECTORY(. DIR_SENSORDB_API_Test)
find_package( Boost 1.54.0 REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${Qt5Widgets_INCLUDES})
include_directories(${Qt5Core_INCLUDES})
include_directories(${Qt5Sql_INCLUDES})
ADD_EXECUTABLE(${TARGET} ${DIR_SENSORDB_API_Test})
TARGET_LINK_LIBRARIES(${TARGET} ${SENSORDB_API_LIB})
ADD_TEST(
	NAME ${TARGET}
	COMMAND $<TARGET_FILE:${TARGET}>
	)
